AG-8094 - Charts API Explorer - Remove overflow hidden from options to prevent input focus styles clipping

--- a/grid-packages/ag-grid-docs/documentation/src/components/charts-api-explorer/Options.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/charts-api-explorer/Options.module.scss
@@ -101,7 +101,6 @@
     }
 
     .children {
-        overflow: hidden;
         padding-left: $size-1;
         padding-right: $size-1;
         margin-top: $size-1 !important; // !important for .ag-styles specificity
